--- a/miroservice-one.properties
+++ b/miroservice-one.properties
@@ -1,2 +1,5 @@
+server.port=8200
 microservice-one.value=10
 spring.application.name=spring-cloud-config
+eureka.client.service-url.default-zone=${EUREKA_URI:http://localhost:8761/eureka}
+eureka.instance.prefer-ip-address=true
