--- a/microservice-one-dev.properties
+++ b/microservice-one-dev.properties
@@ -1,2 +1,4 @@
 server.port=8100
 microservice-one.value=We are the world
+eureka.client.service-url.default-zone=${EUREKA_URI:http://localhost:8761/eureka}
+eureka.instance.prefer-ip-address=true
